# tes-money

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LiteLoaderBDS.cmake  README.md  sql
.github/workflows/: cpplint.yml
.github/workflows /: cpplint.yml
bank/: CMakeLists.txt
bank/header/bank/account/: BankAccount.hpp
bank/lang/: ja-JP.txt
bank/src/: plugin.cpp  version.h
bank/src/account/: BankAccount.cpp
bank/src/account/task/: FetchBalanceTask.hpp
bank/test/: CMakeLists.txt  test.cpp
country/: CMakeLists.txt
country/header/citizen/: Citizen.hpp  CitizenManager.hpp
country/header/country/: Country.hpp  DataManager.hpp
country/header/country/Economy/: CountryEconomy.hpp  MoneyAddTrigger.hpp  MoneyAddTriggerCategory.hpp  MoneyAddTriggerManager.hpp
country/header/country/citizen/: Citizen.hpp  CitizenManager.hpp  CountryCitizen.hpp  Perimission.hpp
country/header/country/country/: Country.hpp
country/header/country/manager/: CitizenRefer.hpp  CountryManager.hpp
country/header/country/permission/: Perimission.hpp  PermissionManager.hpp
country/header/country/util/: Resources.hpp  dll_declspec.hpp
country/header/manager/: CitizenRefer.hpp  CountryManager.hpp
country/header/refer/: CitizenRefer.hpp
country/lang/: ja-JP.txt
country/resources/: MoneyTrigger.json
country/resources/lang/: ja-JP.txt
country/src/: plugin.cpp  version.h
country/src/Citizen/: Citizen.cpp
country/src/Citizen/task/: AddPermissionTask.hpp  RemovePermissionTask.hpp
country/src/CitizenRefer/: CitizenRefer.cpp
country/src/CountryManager/: CountryManager.cpp  DataLoader.cpp  DataLoader.hpp
country/src/UI/: CountryForm.cpp  CountryForm.hpp  General.hpp
country/src/UI/currency/: CurrencyForm.cpp  CurrencyForm.hpp
country/src/country/: Country.cpp  CountryCitizen.cpp
country/src/country/task/: CitizenBanTask.hpp  CitizenJoinTask.hpp
country/src/database/: Resources.cpp
country/src/economy/: CountryEconomy.cpp  MoneyAddTrigger.cpp
country/src/manager/: CitizenRefer.cpp  CountryManager.cpp
country/src/permission/: PermissionManager.cpp
country/test/: CMakeLists.txt  test.cpp
header/: DataManager.hpp
header/country/: Country.hpp  CountryManager.hpp
header/country/citizen/: Citizen.hpp  CitizenRefer.hpp  CountryCitizen.hpp
header/country/dominion/: Dominion.hpp  DominionIndex.hpp  DominionManager.hpp  ServeManager.hpp  ServeStatus.hpp
header/country/economy/: CountryEconomy.hpp
header/currency/: Currency.hpp  CurrencyManager.hpp
header/misc/: CurrencyCommandUpdater.hpp  PermissionManager.hpp
header/misc/money_add_trigger/: MoneyAddTriggerCategory.hpp  MoneyAddTriggerManager.hpp
header/money/: Money.hpp  MoneyAccount.hpp
header/money/player/: PlayerManager.hpp  PlayerMoney.hpp
header/player/: Player.hpp  PlayerManaer.hpp
header/types/: GeneralTypes.hpp  LandTypes.hpp  MoneyTypes.hpp
header/util/: OptionalMessage.hpp  Resources.hpp  dll_declspec.hpp
header/util/geometry/: geometry.hpp
header/util/minecraft/: message.hpp
header/util/player_identify/: PlayerIdentify.hpp  PlayerIdentifyProvider.hpp
header/util/task/: SQLiteExecTask.hpp
lib/: CmakeLists.txt
money/: .gitignore  CMakeLists.txt
money/header/: Currency.hpp  CurrencyCommandUpdater.hpp  CurrencyManager.hpp  Money.hpp  PlayerManager.hpp  api.hpp
money/header/Util/: types.hpp
money/header/currency/: Currency.hpp  CurrencyManager.hpp
money/header/money/: Money.hpp  MoneyAccount.hpp
money/header/player/: PlayerManager.hpp  PlayerMoney.hpp
money/src/: dllmain.cpp  plugin.cpp
money/src/api/: api.cpp
money/src/command/: CommandParser.cpp  CommandParser.hpp
money/src/currency/: Currency.cpp  CurrencyCommandUpdater.cpp
money/src/manager/: CurrencyManager.cpp  PlayerManager.cpp
money/src/money/: Money.cpp
money/src/player/: PlayerMoney.cpp
money/test/: CMakeLists.txt  test.cpp
resource/: MoneyTrigger.json
resource/lang/country/: ja-JP.txt
resource/lang/dominion/: ja-JP.txt
resource/lang/money/: ja-JP.txt
shop/: CMakeLists.txt
src/: dllmain.cpp  plugin.cpp  version.h
src/Util/: dll_declspec.hpp  mc_Util.hpp  types.hpp
src/api/: api.cpp
src/country/: Event.cpp  Event.hpp
src/country/Citizen/: Citizen.cpp
src/country/CitizenRefer/: CitizenRefer.cpp
src/country/CountryManager/: CountryManager.cpp
src/country/UI/: CountryForm.cpp  CountryForm.hpp
src/country/country/: Country.cpp  CountryCitizen.cpp
src/country/data/: DataManager.cpp
src/country/database/: Resources.cpp
src/country/dominion/: DominonManager.cpp  dominion.cpp
src/country/economy/: CountryEconomy.cpp  MoneyAddTrigger.cpp  MoneyAddTriggerCategory.cpp
src/country/permission/: PermissionManager.cpp
src/currency/: Currency.cpp  CurrencyCommandUpdater.cpp  CurrencyCommandUpdater.hpp
src/dominion/: Event.cpp  Event.hpp
src/dominion/Command/: CommandAction.hpp  Serve.cpp  Serve.hpp
src/header/: Currency.hpp  CurrencyManager.hpp  Money.hpp  Player.hpp  PlayerManager.hpp  PlayerMoney.hpp  api.hpp
src/manager/: CurrencyManager.cpp  CurrencyManager.hpp.cpp  PlayerManager.cpp
src/misc/geometry/: Area2D.cpp
src/misc/player_identify/: PlayerIdentifyProvider.cpp
src/misc/task/: DominionDBTask.cpp
src/money/: Event.cpp  Event.hpp  Money.cpp  dllmain.cpp  plugin.cpp
src/money/Util/: mc_Util.hpp  types.hpp
src/money/api/: api.cpp
src/money/command/: CommandParser.cpp  CommandParser.hpp
src/money/currency/: Currency.cpp  CurrencyCommandUpdater.cpp  CurrencyCommandUpdater.hpp
src/money/header/: Currency.hpp  CurrencyManager.hpp  (+2 more)
src/player/: PLayer.cpp  PlayerMoney.cpp
test/: CMakeLists.txt  test.cpp
test/country/: CMakeLists.txt  test.cpp
test/country/test/: CMakeLists.txt  Dominion.cpp  Dominion.hpp  Dominion_test.cpp  Dominion_test.hpp  land_test.cpp  land_test.hpp  test.cpp
test/money/: CMakeLists.txt  test.cpp
test/money/test/: CMakeLists.txt
test/util/: CMakeLists.txt  test.cpp
util/: GeneralTypes.hpp  OptionalMessage.hpp
util/mc/: message.hpp
util/test/: CMakeLists.txt  test.cpp
(+40 files in other folders)
